[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga | Compra directa

--- a/test-rd-933/software-malaga/index.html
+++ b/test-rd-933/software-malaga/index.html
@@ -18,26 +18,24 @@
   <!-- JSON-LD -->
   <script type="application/ld+json">
   {
-  "name": "Delfín Check-in",
-  "@type": "SoftwareApplication",
-  "offers": {
-    "@type": "Offer",
-    "price": 14.99,
-    "availability": "https://schema.org/InStock",
-    "priceCurrency": "EUR"
+  "url": "https://tuwebsite.com/rd-933/software-Málaga",
+  "name": "Software RD 933",
+  "@type": "Organization",
+  "sameAs": "https://www.facebook.com/tuempresa",
+  "address": {
+    "@type": "PostalAddress",
+    "addressRegion": "Andalucía",
+    "addressCountry": "ES",
+    "addressLocality": "Málaga"
   },
   "@context": "https://schema.org",
-  "areaServed": {
-    "name": "Málaga",
-    "@type": "City",
-    "containedIn": {
-      "name": "Andalucía",
-      "@type": "State"
-    }
-  },
-  "description": "Envía partes en lote (incluso sin internet), microsite de reservas, Stripe split y facturación automática. Compra ahora.",
-  "operatingSystem": "Web",
-  "applicationCategory": "BusinessApplication"
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+34 123 456 789",
+    "areaServed": "ES",
+    "contactType": "Customer Service",
+    "availableLanguage": "Spanish"
+  }
 }
   </script>
   
@@ -71,38 +69,39 @@
 </head>
 <body>
   <h1>H1: &quot;Software RD 933 y check-in en Málaga (compra directa)&quot;</h1>
-<p>El alquiler vacacional en Málaga puede ser un desafío, especialmente con la implementación del RD 933. Cumplir con la normativa es esencial para evitar sanciones, pero gestionar los trámites puede resultar agobiante. Aquí es donde entra nuestro software, diseñado específicamente para facilitar el cumplimiento normativo y optimizar el proceso de check-in. Con nuestra herramienta, podrás gestionar tus reservas de manera eficiente y asegurarte de que todo esté en orden.</p>
+<p>En Málaga, los alquileres vacacionales están sujetos a regulaciones estrictas bajo el Real Decreto 933, lo que puede ser un desafío para propietarios y gestores. La falta de cumplimiento puede resultar en sanciones severas, afectando la rentabilidad de tus propiedades. Nuestro software de check-in y cumplimiento RD 933 es la solución que necesitas para simplificar este proceso y asegurar que tu negocio esté siempre al día con la normativa.</p>
 <h2>Qué compras hoy</h2>
+<p>Al adquirir nuestro software, obtendrás las siguientes características clave:</p>
 <ul>
-<li><strong>Cumplimiento Normativo</strong>: Envía partes en lote para el RD 933, asegurando que cumples con la legislación.</li>
-<li><strong>Funcionalidad Offline</strong>: Cola offline que permite seguir operando sin conexión a internet, garantizando que nunca te detengas.</li>
-<li><strong>Microsite de Reservas</strong>: Un microsite personalizado para gestionar las reservas de tus clientes de manera sencilla.</li>
-<li><strong>Stripe Split</strong>: Reparte automáticamente los pagos entre propietarios y gestión, simplificando tus finanzas.</li>
-<li><strong>Facturación Automática</strong>: Genera facturas automáticamente para tus clientes, ahorrando tiempo y esfuerzo.</li>
-<li><strong>Calculadora de Costes</strong>: Herramienta que te ayuda a calcular automáticamente los costes asociados a cada reserva.</li>
+<li><strong>Cumplimiento RD 933 en lote</strong>: Envía partes de forma masiva a las autoridades sin complicaciones.</li>
+<li><strong>Cola offline</strong>: Envía información incluso sin conexión a Internet.</li>
+<li><strong>Microsite de reservas</strong>: Facilita la gestión de reservas y aumenta la visibilidad de tus propiedades.</li>
+<li><strong>Stripe split</strong>: Configura el reparto de ingresos de forma automática entre múltiples propietarios o cuentas.</li>
+<li><strong>Facturación automática</strong>: Genera facturas de manera instantánea para una gestión más eficiente.</li>
+<li><strong>Calculadora de costes</strong>: Evalúa tus gastos de forma precisa para una mejor planificación financiera.</li>
 </ul>
 <h2>Cómo resuelve el dolor</h2>
-<p>Cumplir con el RD 933 en Málaga no es solo una cuestión de evitar multas, sino de ofrecer un servicio profesional y de calidad. La normativa exige que los propietarios informen a las autoridades sobre las estancias, lo que puede ser un proceso engorroso. Por ejemplo, el Ayuntamiento de Málaga requiere que se envíen partes de entrada y salida, y cualquier error puede resultar en sanciones. </p>
-<p>Imagina que recibes una reserva de última hora. Con nuestro software, podrás generar y enviar el parte de manera instantánea, incluso si no tienes internet. Así te aseguras de que siempre estés al día con tus obligaciones legales.</p>
+<p>El cumplimiento con el RD 933 es crucial para operar un alquiler vacacional en Málaga. La Junta de Andalucía y la Delegación de Turismo son dos organismos que exigen reportes regulares y precisos. Por ejemplo, si no envías los partes de entrada y salida de tus huéspedes, podrías enfrentarte a multas que varían desde 1,500 hasta 3,000 euros. Además, los trámites pueden ser tediosos y llevar mucho tiempo. Con nuestro software, evitas estos problemas, asegurando que siempre cumplas con la normativa local.</p>
 <h2>Mini-pruebas (capturas descritas)</h2>
 <ul>
-<li><strong>Panel de envíos RD 933</strong>: Visualiza fácilmente tus envíos y verifica que todo se haya enviado correctamente, sin mostrar datos sensibles.</li>
-<li><strong>Cola offline</strong>: Conoce cómo sigue funcionando el software sin conexión, asegurando que tus operaciones nunca se detengan.</li>
-<li><strong>Stripe split</strong>: Visualiza el esquema de reparto de pagos, garantizando que tanto tú como el propietario reciban lo que les corresponde sin complicaciones.</li>
+<li><strong>Panel de envíos RD 933</strong>: Visualiza de manera intuitiva todas tus operaciones pendientes y completadas, sin revelar datos sensibles.</li>
+<li><strong>Cola offline</strong>: Si no tienes conexión a Internet, el sistema almacenará tus envíos y los procesará automáticamente cuando te reconectes.</li>
+<li><strong>Stripe split</strong>: Con nuestro esquema de reparto, podrás ver cómo los ingresos se distribuyen automáticamente entre las cuentas, facilitando la gestión financiera.</li>
 </ul>
 <h2>Preguntas frecuentes</h2>
-<p><strong>1. ¿Es realmente necesario cumplir con el RD 933?</strong><br>Sí, el incumplimiento puede resultar en sanciones severas por parte de las autoridades locales.</p>
-<p><strong>2. ¿Qué pasa si no tengo internet?</strong><br>No hay problema. Nuestro software permite operar en modo offline, garantizando que puedas seguir registrando entradas y salidas.</p>
-<p><strong>3. ¿Qué tipo de soporte ofrecen?</strong><br>Ofrecemos soporte técnico a través de chat y correo electrónico para resolver cualquier duda que puedas tener.</p>
-<p><strong>4. ¿Cómo realizo los pagos?</strong><br>Los pagos se realizan de forma segura a través de Stripe, garantizando la protección de tus datos.</p>
+<p><strong>¿Es legal usar este software para cumplir con el RD 933?</strong>
+Sí, nuestro software está diseñado específicamente para cumplir con las normativas vigentes en Andalucía.</p>
+<p><strong>¿Qué sucede si tengo problemas de conexión a Internet?</strong>
+Nuestro software tiene una funcionalidad offline que permite almacenar envíos y procesarlos posteriormente, asegurando que no haya interrupciones en el cumplimiento.</p>
+<p><strong>¿Ofrecen soporte técnico?</strong>
+Sí, ofrecemos soporte técnico dedicado para resolver cualquier inquietud que puedas tener.</p>
+<p><strong>¿Cómo puedo pagar?</strong>
+Aceptamos pagos seguros a través de Stripe, garantizando una transacción rápida y sin complicaciones.</p>
 <h2>Información adicional</h2>
-<p>Nuestro software no solo te ayuda a cumplir con la normativa, sino que también optimiza la gestión de tus propiedades. Aumenta la satisfacción de tus clientes y ahorra tiempo en la administración de las reservas. La inversión de solo 14,99 € al mes te permitirá acceder a todas estas funcionalidades y más, sin sorpresas.</p>
-<p>Nota: &quot;Devolución 30 días si no te sirve&quot;.</p>
+<p>Este software no solo te ayuda a cumplir con la normativa, sino que también optimiza la gestión de tus alquileres vacacionales. Desde el envío de partes hasta la facturación, cada característica está diseñada para facilitar tu trabajo y maximizar tus ingresos.</p>
+<p><strong>Nota breve: &quot;Devolución 30 días si no te sirve&quot;.</strong></p>
 <h2>Datos locales útiles</h2>
-<ul>
-<li><strong>Ayuntamiento de Málaga</strong>: Asegúrate de estar al tanto de los horarios de atención y las normativas locales relacionadas con el alquiler vacacional.</li>
-<li><strong>Oficina de Turismo de Málaga</strong>: Infórmate sobre los requisitos específicos que pueden aplicar a tu propiedad, especialmente en temporadas altas.</li>
-</ul>
+<p>En Málaga, es recomendable estar al tanto de los horarios de la Junta de Andalucía, especialmente en verano, cuando la demanda de alquileres vacacionales aumenta. También es esencial conocer las directrices de la Delegación de Turismo, que puede ofrecer asesoría sobre el cumplimiento de la normativa.</p>
 <h2>Enlaces relacionados</h2>
 <ul>
 <li><a href="https://delfincheckin.com/rd-933-guia-completa">Guía completa sobre RD 933</a></li>
