[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga | Compra directa

--- a/test-rd-933/software-malaga/index.html
+++ b/test-rd-933/software-malaga/index.html
@@ -3,41 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Software RD 933 y check-in en Málaga</title>
-  <meta name="description" content="Software de gestión para alquiler vacacional en Málaga">
+  <title>Software RD 933 y check-in en Málaga | Compra directa</title>
+  <meta name="description" content="Envía partes en lote (incluso sin internet), microsite de reservas, Stripe split y facturación automática. Compra ahora.">
   <meta name="robots" content="noindex, nofollow">
   <link rel="canonical" href="https://delfincheckin.com/test-rd-933/software-malaga">
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Software RD 933 y check-in en Málaga">
-  <meta property="og:description" content="Software de gestión para alquiler vacacional en Málaga">
+  <meta property="og:title" content="Software RD 933 y check-in en Málaga | Compra directa">
+  <meta property="og:description" content="Envía partes en lote (incluso sin internet), microsite de reservas, Stripe split y facturación automática. Compra ahora.">
   <meta property="og:url" content="https://delfincheckin.com/test-rd-933/software-malaga">
   <meta property="og:site_name" content="Delfín Check-in">
   
   <!-- JSON-LD -->
   <script type="application/ld+json">
   {
-  "name": "Delfín Check-in",
-  "@type": "SoftwareApplication",
-  "offers": {
-    "@type": "Offer",
-    "price": 14.99,
-    "availability": "https://schema.org/InStock",
-    "priceCurrency": "EUR"
-  },
+  "url": "https://tuwebsite.com/rd-933/software-Málaga",
+  "name": "Software Alquiler Málaga",
+  "@type": "Organization",
+  "sameAs": [
+    "https://facebook.com/tuempresa",
+    "https://twitter.com/tuempresa"
+  ],
   "@context": "https://schema.org",
-  "areaServed": {
-    "name": "Málaga",
-    "@type": "City",
-    "containedIn": {
-      "name": "Andalucía",
-      "@type": "State"
-    }
-  },
-  "description": "",
-  "operatingSystem": "Web",
-  "applicationCategory": "BusinessApplication"
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+34-123-456-789",
+    "areaServed": "ES",
+    "contactType": "Customer Service",
+    "availableLanguage": "Spanish"
+  }
 }
   </script>
   
@@ -70,90 +65,46 @@
   </style>
 </head>
 <body>
-  <pre><code class="language-mdx">---
-title: &quot;Software RD 933 y check-in en Málaga | Compra directa&quot;
-slug: &quot;rd-933/software-Málaga&quot;
-intent: &quot;transactional&quot;
-region: &quot;Andalucía&quot;
-city: &quot;Málaga&quot;
-price_eur: 14.99
-canonical: &quot;/rd-933/software-Málaga&quot;
-draft: false
----
-
-&lt;meta-title&gt;Software RD 933 y check-in en Málaga | Compra directa&lt;/meta-title&gt;
-&lt;meta-description&gt;Envía partes en lote (incluso sin internet), microsite de reservas, Stripe split y facturación automática. Compra ahora.&lt;/meta-description&gt;
-
-# H1: &quot;Software RD 933 y check-in en Málaga (compra directa)&quot;
-
-Si gestionas un alquiler vacacional en Málaga, sabes lo complicado que es cumplir con la normativa RD 933. La falta de herramientas adecuadas puede llevarte a enfrentar sanciones, pérdida de reservas y estrés innecesario. Aquí es donde entra nuestro software: una solución integral que te permite gestionar el check-in de tus huéspedes y cumplir con todos los requerimientos legales de forma fácil y rápida. ¡Compra ahora y simplifica tu gestión!
-
-## Qué compras hoy
-- **Cumplimiento normativo RD 933 en lote**: Envía partes de forma sencilla y rápida.
-- **Cola offline**: Sin conexión a internet, tu gestión no se detiene.
-- **Microsite de reservas**: Facilita la gestión de reservas en un solo lugar.
-- **Stripe split**: Distribuye automáticamente los pagos entre los propietarios y la plataforma.
-- **Facturación automática**: Genera y envía facturas a tus huéspedes sin esfuerzo.
-- **Calculadora de costes**: Ten siempre control sobre tus gastos.
-
-## Cómo resuelve el dolor
-El cumplimiento del RD 933 en Málaga es fundamental para evitar sanciones de la Junta de Andalucía. Por ejemplo, si no envías los partes de entrada y salida de los huéspedes a la policía, puedes enfrentarte a multas significativas. Además, la falta de documentación adecuada puede derivar en problemas con tu licencia de alquiler. Nuestro software te permite enviar estos partes de manera rápida y en lotes, garantizando que siempre estés al día con tus obligaciones legales.
-
-## Mini-pruebas
-- **Panel de envíos RD 933**: Visualiza el estado de tus envíos y asegúrate de que todo esté en orden sin revelar datos sensibles.
-- **Cola offline**: ¿Sin internet? No hay problema. Nuestro software permite que sigas gestionando el check-in y los partes sin conexión.
-- **Stripe split**: Con nuestro esquema de reparto, los pagos se dividen automáticamente, facilitando la gestión financiera de tu negocio.
-
-## Preguntas frecuentes
-**¿Es legal utilizar este software?**  
-Sí, cumple con todas las normativas vigentes en España, incluyendo el RD 933.
-
-**¿Qué sucede si no tengo internet?**  
-Puedes seguir utilizando la cola offline para gestionar el check-in y enviar partes posteriormente.
-
-**¿Ofrecen soporte técnico?**  
-Sí, contamos con un equipo de soporte disponible para resolver cualquier duda o incidencia.
-
-**¿Cómo se realizan los pagos?**  
-Los pagos se gestionan de forma segura a través de Stripe, garantizando la protección de tus datos.
-
-## Información adicional
-Nuestro software no solo te ayuda a cumplir con la normativa RD 933, sino que también optimiza la gestión de tu alquiler vacacional. Con herramientas como facturación automática y microsite de reservas, tendrás todo lo que necesitas para ofrecer un servicio excepcional a tus huéspedes. Además, la calculadora de costes te permitirá tener un control total sobre tus gastos, asegurando que tu negocio sea rentable.
-
-Nota breve: &quot;Devolución 30 días si no te sirve&quot;.
-
-## Datos locales útiles
-En Málaga, es importante estar al tanto de los horarios de la Junta de Andalucía, donde puedes presentar tus partes de entrada y salida. Recuerda que la Policía Local realiza inspecciones periódicas, así que asegúrate de tener toda tu documentación al día. También es recomendable conocer las normativas locales sobre alquileres vacacionales para evitar problemas con tu licencia.
-
-&lt;schema&gt;
-{
-  &quot;@context&quot;: &quot;https://schema.org&quot;,
-  &quot;@type&quot;: &quot;Organization&quot;,
-  &quot;name&quot;: &quot;Software RD 933 Málaga&quot;,
-  &quot;url&quot;: &quot;https://www.ejemplo.com&quot;,
-  &quot;logo&quot;: &quot;https://www.ejemplo.com/logo.png&quot;,
-  &quot;sameAs&quot;: &quot;https://www.facebook.com/ejemplo&quot;,
-  
-  &quot;@type&quot;: &quot;Product&quot;,
-  &quot;name&quot;: &quot;Software RD 933 para Alquiler Vacacional&quot;,
-  &quot;description&quot;: &quot;Software para gestión de check-in y cumplimiento del RD 933 en Málaga.&quot;,
-  &quot;offers&quot;: {
-    &quot;@type&quot;: &quot;Offer&quot;,
-    &quot;price&quot;: &quot;14.99&quot;,
-    &quot;priceCurrency&quot;: &quot;EUR&quot;,
-    &quot;itemCondition&quot;: &quot;https://schema.org/NewCondition&quot;,
-    &quot;availability&quot;: &quot;https://schema.org/InStock&quot;
-  },
-  
-  &quot;@type&quot;: &quot;SoftwareApplication&quot;,
-  &quot;applicationCategory&quot;: &quot;BusinessApplication&quot;,
-  &quot;operatingSystem&quot;: &quot;All&quot;,
-  &quot;softwareVersion&quot;: &quot;1.0&quot;,
-  &quot;areaServed&quot;: &quot;Andalucía/Málaga&quot;
-}
-&lt;/schema&gt;
-</code></pre>
-<p>Este contenido está optimizado para SEO técnico, con un enfoque en la conversión, y cumple con los requisitos establecidos. Promueve la compra directa del software, abordando las necesidades del usuario de forma clara y concisa.</p>
+  <h1>H1: &quot;Software RD 933 y check-in en Málaga (compra directa)&quot;</h1>
+<p>Alquilar propiedades vacacionales en Málaga puede ser un proceso complicado y lleno de requisitos legales. La normativa RD 933 exige un cumplimiento riguroso que, de no atenderse, puede acarrear sanciones y problemas con las autoridades. Para solucionar esta situación, te presentamos nuestro software diseñado específicamente para facilitar el check-in y el cumplimiento de esta normativa.</p>
+<h2>Qué compras hoy</h2>
+<ul>
+<li><strong>Cumplimiento normativo RD 933 en lote</strong>: Envía todos los partes de forma agrupada, ahorrando tiempo y esfuerzo.</li>
+<li><strong>Cola offline</strong>: Envía partes incluso sin conexión a internet, asegurando que nunca se pierda un registro.</li>
+<li><strong>Microsite de reservas</strong>: Un sitio web personalizado que facilita la gestión de reservas y la comunicación con tus huéspedes.</li>
+<li><strong>Stripe split</strong>: Implementa pagos compartidos de forma sencilla y rápida.</li>
+<li><strong>Facturación automática</strong>: Genera y envía facturas automáticamente a tus clientes, evitando errores manuales.</li>
+<li><strong>Calculadora de costes</strong>: Evalúa los gastos de gestión y el beneficio de tus alquileres con un solo clic.</li>
+</ul>
+<h2>Cómo resuelve el dolor</h2>
+<p>El cumplimiento de la normativa RD 933 en Málaga es fundamental para evitar sanciones. Por ejemplo, la Junta de Andalucía exige que todos los propietarios de alojamientos turísticos envíen un parte de entrada y salida de los huéspedes. Si no lo hacen, pueden enfrentarse a multas significativas. Otro caso común es el de los apartamentos turísticos que deben presentar informes de ocupación mensuales, lo que puede ser abrumador sin un software adecuado. Nuestro programa simplifica todos estos trámites, haciendo que cumplir con la ley sea un proceso sencillo y rápido.</p>
+<h2>Mini-pruebas (capturas descritas)</h2>
+<ul>
+<li><strong>Panel de envíos RD 933</strong>: Visualiza un panel intuitivo donde podrás gestionar todos los envíos de partes sin complicaciones.</li>
+<li><strong>Cola offline</strong>: Imagina que no tienes conexión a internet; nuestro sistema permite almacenar datos y enviarlos automáticamente cuando la conexión se restablezca.</li>
+<li><strong>Stripe split</strong>: Con un esquema visual claro, podrás ver cómo se distribuyen los pagos entre varios propietarios o servicios de forma automática.</li>
+</ul>
+<h2>Preguntas frecuentes</h2>
+<p><strong>¿Es legal usar este software para cumplir con la normativa?</strong><br>Sí, nuestro software está diseñado para cumplir con todas las regulaciones vigentes en Andalucía.</p>
+<p><strong>¿Qué sucede si no tengo internet?</strong><br>El software tiene una funcionalidad offline que permite enviar partes de forma acumulativa una vez que la conexión se restablezca.</p>
+<p><strong>¿Ofrecen soporte técnico?</strong><br>Sí, contamos con un equipo de soporte disponible para resolver cualquier duda o problema que puedas tener.</p>
+<p><strong>¿Cómo se realizan los pagos?</strong><br>Los pagos se realizan a través de Stripe, garantizando seguridad y rapidez en las transacciones.</p>
+<h2>Información adicional</h2>
+<p>Nuestro software no solo simplifica la gestión de alquileres vacacionales, sino que también mejora la experiencia de tus huéspedes. Con un microsite personalizado y facturación automática, podrás enfocarte en lo que realmente importa: ofrecer un excelente servicio.</p>
+<p><strong>Nota breve</strong>: &quot;Devolución 30 días si no te sirve&quot;.</p>
+<h2>Datos locales útiles</h2>
+<ul>
+<li><strong>Junta de Andalucía</strong>: Asegúrate de cumplir con los requisitos de registro de alojamientos turísticos.</li>
+<li><strong>Cuerpo Nacional de Policía</strong>: Recuerda que es obligatorio presentar los partes de entrada y salida a las autoridades locales.</li>
+<li><strong>Oficina de Turismo de Málaga</strong>: Consulta recursos adicionales sobre la gestión de alojamientos turísticos en la ciudad.</li>
+</ul>
+<h2>Enlaces relacionados</h2>
+<ul>
+<li><a href="https://delfincheckin.com/rd-933-guia-completa">Guía completa sobre RD 933</a></li>
+<li><a href="https://delfincheckin.com/envio-partes-sin-internet">Enviar partes sin internet</a></li>
+<li><a href="https://delfincheckin.com/microsite-reservas">Microsite de reservas</a></li>
+<li><a href="https://delfincheckin.com/checkout"><strong>Comprar ahora →</strong></a></li>
+</ul>
 
   
 <!-- Calculadora de Precios con Stripe -->
