[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga | Compra directa

--- a/test-rd-933/software-malaga/index.html
+++ b/test-rd-933/software-malaga/index.html
@@ -18,21 +18,26 @@
   <!-- JSON-LD -->
   <script type="application/ld+json">
   {
-  "url": "https://tuwebsite.com/rd-933/software-Málaga",
-  "name": "Software Alquiler Málaga",
-  "@type": "Organization",
-  "sameAs": [
-    "https://facebook.com/tuempresa",
-    "https://twitter.com/tuempresa"
-  ],
+  "name": "Delfín Check-in",
+  "@type": "SoftwareApplication",
+  "offers": {
+    "@type": "Offer",
+    "price": 14.99,
+    "availability": "https://schema.org/InStock",
+    "priceCurrency": "EUR"
+  },
   "@context": "https://schema.org",
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+34-123-456-789",
-    "areaServed": "ES",
-    "contactType": "Customer Service",
-    "availableLanguage": "Spanish"
-  }
+  "areaServed": {
+    "name": "Málaga",
+    "@type": "City",
+    "containedIn": {
+      "name": "Andalucía",
+      "@type": "State"
+    }
+  },
+  "description": "Envía partes en lote (incluso sin internet), microsite de reservas, Stripe split y facturación automática. Compra ahora.",
+  "operatingSystem": "Web",
+  "applicationCategory": "BusinessApplication"
 }
   </script>
   
@@ -66,38 +71,43 @@
 </head>
 <body>
   <h1>H1: &quot;Software RD 933 y check-in en Málaga (compra directa)&quot;</h1>
-<p>Alquilar propiedades vacacionales en Málaga puede ser un proceso complicado y lleno de requisitos legales. La normativa RD 933 exige un cumplimiento riguroso que, de no atenderse, puede acarrear sanciones y problemas con las autoridades. Para solucionar esta situación, te presentamos nuestro software diseñado específicamente para facilitar el check-in y el cumplimiento de esta normativa.</p>
+<p>En Málaga, los propietarios de alquileres vacacionales enfrentan un gran desafío: cumplir con la normativa RD 933 sobre el registro de huéspedes. La falta de un sistema eficiente no solo puede generar problemas legales, sino también pérdidas económicas. Nuestro software de check-in y cumplimiento RD 933 es la solución perfecta para simplificar tus trámites y asegurarte de que estás en regla sin complicaciones.</p>
 <h2>Qué compras hoy</h2>
+<p>Al adquirir nuestro software, obtienes:</p>
 <ul>
-<li><strong>Cumplimiento normativo RD 933 en lote</strong>: Envía todos los partes de forma agrupada, ahorrando tiempo y esfuerzo.</li>
-<li><strong>Cola offline</strong>: Envía partes incluso sin conexión a internet, asegurando que nunca se pierda un registro.</li>
-<li><strong>Microsite de reservas</strong>: Un sitio web personalizado que facilita la gestión de reservas y la comunicación con tus huéspedes.</li>
-<li><strong>Stripe split</strong>: Implementa pagos compartidos de forma sencilla y rápida.</li>
-<li><strong>Facturación automática</strong>: Genera y envía facturas automáticamente a tus clientes, evitando errores manuales.</li>
-<li><strong>Calculadora de costes</strong>: Evalúa los gastos de gestión y el beneficio de tus alquileres con un solo clic.</li>
+<li><strong>Cumplimiento normativo RD 933 en lote</strong>: Envía partes de alta de huéspedes de forma masiva.</li>
+<li><strong>Cola offline</strong>: Registra huéspedes incluso sin conexión a internet.</li>
+<li><strong>Microsite de reservas</strong>: Plataforma personalizada para gestionar tus reservas.</li>
+<li><strong>Stripe split</strong>: Facilita el reparto automático de pagos entre propietarios y agentes.</li>
+<li><strong>Facturación automática</strong>: Generación de facturas al instante para tus clientes.</li>
+<li><strong>Calculadora de costes</strong>: Controla tus gastos y maximiza tus beneficios.</li>
 </ul>
 <h2>Cómo resuelve el dolor</h2>
-<p>El cumplimiento de la normativa RD 933 en Málaga es fundamental para evitar sanciones. Por ejemplo, la Junta de Andalucía exige que todos los propietarios de alojamientos turísticos envíen un parte de entrada y salida de los huéspedes. Si no lo hacen, pueden enfrentarse a multas significativas. Otro caso común es el de los apartamentos turísticos que deben presentar informes de ocupación mensuales, lo que puede ser abrumador sin un software adecuado. Nuestro programa simplifica todos estos trámites, haciendo que cumplir con la ley sea un proceso sencillo y rápido.</p>
-<h2>Mini-pruebas (capturas descritas)</h2>
+<p>El cumplimiento normativo del RD 933 en Málaga es crucial para evitar sanciones. Por ejemplo, la <strong>Consejería de Turismo de Andalucía</strong> exige que todos los propietarios registren a sus huéspedes en un plazo determinado tras su llegada. Además, la <strong>Policía Local</strong> puede realizar inspecciones, y un fallo en la documentación puede resultar en multas significativas.</p>
+<p>Con nuestro software, tienes la tranquilidad de que todos los registros se envían correctamente y a tiempo, evitando cualquier contratiempo legal.</p>
+<h2>Mini-pruebas</h2>
 <ul>
-<li><strong>Panel de envíos RD 933</strong>: Visualiza un panel intuitivo donde podrás gestionar todos los envíos de partes sin complicaciones.</li>
-<li><strong>Cola offline</strong>: Imagina que no tienes conexión a internet; nuestro sistema permite almacenar datos y enviarlos automáticamente cuando la conexión se restablezca.</li>
-<li><strong>Stripe split</strong>: Con un esquema visual claro, podrás ver cómo se distribuyen los pagos entre varios propietarios o servicios de forma automática.</li>
+<li><p><strong>Panel de envíos RD 933</strong>: Accede a un panel intuitivo donde puedes gestionar tus envíos de forma efectiva, sin complicaciones. Visualiza el estado de cada parte enviado y asegúrate de que todo está en orden.</p>
+</li>
+<li><p><strong>Cola offline</strong>: Imagina que estás en una situación donde no tienes acceso a internet. Nuestro sistema te permite registrar a tus huéspedes sin conexión, sincronizando los datos en cuanto restablezcas la conexión.</p>
+</li>
+<li><p><strong>Stripe split</strong>: Con nuestro sistema de reparto automático, podrás dividir los pagos entre propietarios y agentes sin estrés. Visualiza la distribución de los fondos y asegúrate de que todos reciben lo que les corresponde.</p>
+</li>
 </ul>
 <h2>Preguntas frecuentes</h2>
-<p><strong>¿Es legal usar este software para cumplir con la normativa?</strong><br>Sí, nuestro software está diseñado para cumplir con todas las regulaciones vigentes en Andalucía.</p>
-<p><strong>¿Qué sucede si no tengo internet?</strong><br>El software tiene una funcionalidad offline que permite enviar partes de forma acumulativa una vez que la conexión se restablezca.</p>
-<p><strong>¿Ofrecen soporte técnico?</strong><br>Sí, contamos con un equipo de soporte disponible para resolver cualquier duda o problema que puedas tener.</p>
-<p><strong>¿Cómo se realizan los pagos?</strong><br>Los pagos se realizan a través de Stripe, garantizando seguridad y rapidez en las transacciones.</p>
+<p><strong>¿Es legal el uso de este software?</strong><br>Sí, nuestro software está diseñado para cumplir con todas las normativas vigentes en Andalucía, incluyendo el RD 933.</p>
+<p><strong>¿Qué sucede si no tengo internet?</strong><br>No hay problema, nuestro sistema tiene una función de cola offline que te permite registrar a tus huéspedes sin conexión.</p>
+<p><strong>¿Qué tipo de soporte ofrecen?</strong><br>Brindamos soporte técnico a través de chat y correo electrónico, asegurando que siempre tengas ayuda cuando lo necesites.</p>
+<p><strong>¿Cómo se realizan los pagos?</strong><br>Los pagos se gestionan a través de Stripe, garantizando la seguridad y la transparencia en cada transacción.</p>
 <h2>Información adicional</h2>
-<p>Nuestro software no solo simplifica la gestión de alquileres vacacionales, sino que también mejora la experiencia de tus huéspedes. Con un microsite personalizado y facturación automática, podrás enfocarte en lo que realmente importa: ofrecer un excelente servicio.</p>
+<p>Además de cumplir con la normativa, nuestro software mejora la eficiencia de tu negocio, ahorrándote tiempo y esfuerzo. Puedes dedicar más tiempo a lo que realmente importa: ofrecer una experiencia excepcional a tus huéspedes.</p>
 <p><strong>Nota breve</strong>: &quot;Devolución 30 días si no te sirve&quot;.</p>
 <h2>Datos locales útiles</h2>
 <ul>
-<li><strong>Junta de Andalucía</strong>: Asegúrate de cumplir con los requisitos de registro de alojamientos turísticos.</li>
-<li><strong>Cuerpo Nacional de Policía</strong>: Recuerda que es obligatorio presentar los partes de entrada y salida a las autoridades locales.</li>
-<li><strong>Oficina de Turismo de Málaga</strong>: Consulta recursos adicionales sobre la gestión de alojamientos turísticos en la ciudad.</li>
+<li><strong>Consejería de Turismo de Andalucía</strong>: Asegúrate de estar al tanto de las actualizaciones en las normativas locales.</li>
+<li><strong>Policía Local de Málaga</strong>: Mantente informado sobre las inspecciones y requisitos de registro de huéspedes.</li>
 </ul>
+<p>¡No esperes más! Adquiere nuestro software ahora mismo por solo <strong>14.99 EUR</strong> y asegura el cumplimiento de la normativa RD 933 en tu alquiler vacacional. Haz clic en el botón de compra y comienza a simplificar tu gestión hoy.</p>
 <h2>Enlaces relacionados</h2>
 <ul>
 <li><a href="https://delfincheckin.com/rd-933-guia-completa">Guía completa sobre RD 933</a></li>
